# railway-speed-sensor-simu

./: .gitignore  CMakeLists.txt  README.md  float_equality_ulp.c  float_equality_ulp.h  freq.xlsx  out-gpios.c  out-gpios.h  pwm-managed.c  pwm-managed.h  speed-sensor-util.c  speed-sensor-util.h  speed-sensor.c  speed-sensor.h  timer-managed.c  timer-managed.h
schematics/speed-sensor-simulator/: #auto_saved_files#  _autosave-speed-sensor-simulator.kicad_sch  speed-sensor-simulator.kicad_prl  speed-sensor-simulator.kicad_pro  speed-sensor-simulator.kicad_sch  sym-lib-table  ~speed-sensor-simulator.kicad_sch.lck
